syntax = "proto3";
package members.v1.common;


enum Service {
    SERVICE_UNKNOWN=0;
	SERVICE_HEALTH=1;
	SERVICE_REGISTRY=2;
	SERVICE_ADMIN=99;
}

message Empty {}
message Member {
    string address=1;
    string dns=2;
    Service service =3;
    string join_time=4;
    string last_health=5;
}
